# theking

./: .gitignore  README.md  SKILL.md  dogfood.sh  install.sh  pyproject.toml
.theking/agents/: tdd-guide.md
.theking/context/: evolution-workflow-ux.md  verification-strategy.md
scripts/: __init__.py  constants.py  doctor.py  scaffold.py  sessions.py  sprint_plan.py  validation.py  workflowctl.py
templates/: __init__.py  code_review_round.md.tmpl  project.md.tmpl  resolved_code_review_round.md.tmpl  spec.md.tmpl  sprint.md.tmpl  task.md.tmpl  theking_agents_catalog.md.tmpl  theking_agents_readme.md.tmpl  theking_architecture.md.tmpl  theking_bootstrap.md.tmpl  theking_dev_workflow.md.tmpl  theking_memory.md.tmpl  theking_project_overview.md.tmpl  theking_readme.md.tmpl  theking_verification_readme.md.tmpl
templates/agents/: __init__.py  agent_architect.md.tmpl  agent_build_error_resolver.md.tmpl  agent_code_reviewer.md.tmpl  agent_doc_updater.md.tmpl  agent_e2e_runner.md.tmpl  agent_perf_optimizer.md.tmpl  agent_planner.md.tmpl  agent_refactor_cleaner.md.tmpl  agent_security_reviewer.md.tmpl  agent_tdd_guide.md.tmpl
templates/commands/: __init__.py  cmd_analyze_project.md.tmpl  cmd_decree.md.tmpl
templates/hooks/: __init__.py  claude_settings.json.tmpl  hook_check_spec.js.tmpl  hook_check_status.js.tmpl  hook_remind_review.js.tmpl
templates/kimi/: __init__.py  main_agent.yaml.tmpl
templates/scaffold/: __init__.py  agents_md.tmpl  claude_md.tmpl  codebuddy_md.tmpl  gitignore.tmpl  theking_agents_catalog.md.tmpl  theking_agents_readme.md.tmpl  theking_architecture.md.tmpl  theking_bootstrap.md.tmpl  theking_dev_workflow.md.tmpl  theking_project_overview.md.tmpl  theking_readme.md.tmpl
templates/skills/: __init__.py  skill_knowledge_base.md.tmpl  skill_workflow_governance.md.tmpl
templates/workflow/: __init__.py  adr.md.tmpl  code_review_round.md.tmpl  followups.md.tmpl  handoff.md.tmpl  project.md.tmpl  resolved_code_review_round.md.tmpl  spec.md.tmpl  sprint.md.tmpl  task.md.tmpl
tests/: conftest.py  test_adr_path_convention.py  test_agent_descriptions.py  test_agent_prompt_convention.py  test_agent_run_ledger.py  test_architect_trigger_signals.py  test_bundle.py  test_catalog_architect_upgrade.py  test_check_rules.py  test_code_reviewer_untested_paths.py  test_codebuddy_projection.py  test_console_script.py  test_doctor_command.py  test_error_hints.py  test_evidence_schema_gate.py  test_execution_profile_inference.py  test_failure_modes_subsection.py  test_finalize.py  test_followup_sprint.py  test_goal_gate.py  test_green_pass_marker_gate.py  test_handoff_gate.py  test_init_project.py  test_init_sprint_plan.py  test_init_task.py  test_install_script.py  test_phase1_scouting_checklist.py  test_plan_errors_aggregate.py  test_planner_playbook.py  test_review_resolution_coverage.py  test_review_round_hint.py  test_seal_sprint.py  test_skill_phase_rationalizations.py  test_skill_text_seal_followup.py  test_spec_section_count_gate.py  test_sprint_check.py  test_sprint_smoke.py  test_task_flow_e2e.py  test_tdd_guide_adversarial.py  test_upgrade.py  (+1 more)
