[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theking"
version = "0.1.0"
description = "Strict spec/sprint/task/review workflow scaffolding for long-running agent work"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
workflowctl = "theking.workflowctl:main"

[tool.setuptools]
packages = [
	"theking",
	"theking.templates",
	"theking.templates.agents",
	"theking.templates.commands",
	"theking.templates.hooks",
	"theking.templates.scaffold",
	"theking.templates.skills",
	"theking.templates.workflow",
]

[tool.setuptools.package-dir]
theking = "scripts"
"theking.templates" = "templates"
"theking.templates.agents" = "templates/agents"
"theking.templates.commands" = "templates/commands"
"theking.templates.hooks" = "templates/hooks"
"theking.templates.scaffold" = "templates/scaffold"
"theking.templates.skills" = "templates/skills"
"theking.templates.workflow" = "templates/workflow"

[tool.setuptools.package-data]
"theking.templates.agents" = ["*.tmpl"]
"theking.templates.commands" = ["*.tmpl"]
"theking.templates.hooks" = ["*.tmpl"]
"theking.templates.scaffold" = ["*.tmpl"]
"theking.templates.skills" = ["*.tmpl"]
"theking.templates.workflow" = ["*.tmpl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
